syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = ".";

service UserService {
  rpc CreateUser(User) returns (User);
  rpc GetUser(UserIdd) returns  (GetUserResponse);
  rpc DeleteUser(UserIdd) returns (google.protobuf.Empty);
  rpc UpdateUser(User) returns (User);
  rpc GetAllUser(GetAllRequest) returns (GetAllResponse);
  rpc CheckField(CheckFieldRequest) returns (CheckFieldResponse);
  rpc GetUserByEmail(Email) returns (User);
}

message Email {
  string email = 1;
}

message CheckFieldRequest {
  string field = 1;
  string value = 2;
}

message CheckFieldResponse {
  bool unique = 1;
}

message GetAllRequest {
  int64 page = 1;
  int64 limit = 2;
};

message PostWithComments {
  Postt post = 1;
  repeated Commentt comment = 2;
}


message Commentt {
  string id = 1;
  string user_id = 2;
  string post_id = 3;
  string content = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message Postt {
  string id = 1;
  string user_id = 2;
  string content = 3;
  string image_url = 4;
  string title = 5;
  int64 likes = 6;
  int64 dislikes = 7;
  int64 views = 8;
  repeated Commentt comments = 9;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string first_name = 5;
  string last_name = 6;
  string bio = 7;
  string website = 8;
  string refresh_token = 9;
  repeated Postt posts = 10;
}

message GetAllResponse {
  repeated GetUserResponse users = 1;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string first_name = 5;
  string last_name = 6;
  string bio = 7;
  string website = 8;
  string refresh_token = 9;
}

message UserIdd {
  string id = 1;
}

message UsersRequest {
  int64 page = 1;
  int64 limit = 2;
  string id = 3;
}

message UsersResponse {
  repeated User users = 1;
  int64 count = 2;
}